// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en PrimeraApp Debe de mostrar PrimeraApp correctamente 1`] = `
<Fragment>
  <h1>
    Hola Mundo
  </h1>
  <p>
    Soy un subtitulo
  </p>
</Fragment>
`;

exports[`Pruebas en PrimeraApp debe mostrar el subtitulo enviado por props 1`] = `
<Fragment>
  <h1>
    Hola Mundo
  </h1>
  <p>
    Hola Mundo
  </p>
</Fragment>
`;
